<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.account.CreateWalletActivity"
    android:background="@color/white">
    <include
        android:id="@+id/includeTool"
        layout="@layout/layout_toolbar_with_title"/>
    <ImageView
        android:id="@+id/logo"
        app:layout_constraintTop_toBottomOf="@id/includeTool"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="43dp"
        android:layout_height="40dp"
        android:src="@mipmap/tab_wallet"
        />
    <TextView
        android:id="@+id/createWalletTip"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/normal_margin"
        android:text="@string/create_wallet"
        style="@style/create_wallet_tip" />
    <org.newtonproject.newtoncore.android.widget.HelperEditTextLayout
        android:id="@+id/walletNameLayout"
        app:layout_constraintTop_toBottomOf="@id/createWalletTip"
        style="@style/create_wallet_layout_normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:title="@string/wallet_name"
        app:hint="@string/hint_set_wallet_name"
        app:maxLength="32"
        />
    <org.newtonproject.newtoncore.android.widget.HelperEditTextLayout
        android:id="@+id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@id/walletNameLayout"
        style="@style/create_wallet_layout_normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:title="@string/text_wallet_password"
        app:hint="@string/hint_password"
        app:inputType="textPassword"
        app:maxLength="20"
        />
    <org.newtonproject.newtoncore.android.widget.HelperEditTextLayout
        android:id="@+id/confirmPasswordLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        style="@style/create_wallet_layout_normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:title="@string/hint_repassword"
        app:hint="@string/hint_repeat_password"
        app:inputType="textPassword"
        app:maxLength="20"
        />
    <org.newtonproject.newtoncore.android.widget.HelperEditTextLayout
        android:id="@+id/inviteCodeLayout"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordLayout"
        style="@style/create_wallet_layout_normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:title="@string/text_invitation_code_option"
        app:hint="@string/hint_type_invitation_code"
        app:inputType="textCapCharacters"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/create_account_button"
        style="@style/main_button" 
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/text_continue"
        />
    <TextView
        android:id="@+id/termOfServiceTextView"
        app:layout_constraintBottom_toTopOf="@id/create_account_button"
        style="@style/term_of_service"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/term_of_service_privacy_policy"
        android:layout_marginBottom="@dimen/big_margin"
        />
</android.support.constraint.ConstraintLayout>