<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    >
    <include
        android:id="@+id/includeTool"
        layout="@layout/layout_toolbar_with_title" />
    <android.support.constraint.ConstraintLayout
        android:id="@+id/importLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/includeTool"
        android:layout_marginTop="?actionBarSize"
        >
        <ImageView
            android:id="@+id/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="43dp"
            android:layout_height="40dp"
            android:src="@mipmap/icon_proc_backup"
            />
        <TextView
            android:id="@+id/titleTextView"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/create_wallet_tip"
            android:text="@string/text_recover_wallet"
            />
        <LinearLayout
            android:id="@+id/tabLayout"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/big_padding"
            android:layout_marginRight="@dimen/big_padding"
            android:background="@drawable/bg_import_tab_layout"
            >
            <TextView
                android:id="@+id/importLeft"
                style="@style/import_tab_left"
                android:text="@string/mnemonic_title"
                />
            <TextView
                android:id="@+id/importMiddle"
                style="@style/import_tab_middle"
                android:text="@string/keystore_title"
                />
            <TextView
                android:id="@+id/importRight"
                style="@style/import_tab_right"
                android:text="@string/privateKey_title"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/importEdittext"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"
            android:layout_margin="@dimen/big_margin"
            android:background="@drawable/bg_mnemonic_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/big_padding"
            android:gravity="left"
            android:textSize="14sp"
            android:textColor="@color/mainColor"
            android:lines="7"
            />
        <TextView
            android:id="@+id/errorTextView"
            app:layout_constraintTop_toBottomOf="@id/importEdittext"
            app:layout_constraintLeft_toLeftOf="@id/importEdittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_marginTop="@dimen/normal_margin"
            />
        <org.newtonproject.newtoncore.android.widget.HelperEditTextLayout
            android:id="@+id/keystorePasswordLayout"
            app:layout_constraintTop_toBottomOf="@id/errorTextView"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginLeft="@dimen/big_margin"
            android:layout_marginRight="@dimen/big_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/text_keystore_password"
            app:hint="@string/text_your_keystore_password"
            app:inputType="textPassword"
            />
        <TextView
            android:id="@+id/termOfServiceTextView1"
            app:layout_constraintBottom_toTopOf="@id/continueButton"
            style="@style/term_of_service"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/term_of_service_privacy_policy"
            android:layout_marginBottom="@dimen/big_margin"
            />
        <Button
            android:id="@+id/continueButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="@dimen/button_bottom"
            android:text="@string/text_continue"
            style="@style/main_button"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/settingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/includeTool"
        android:layout_marginTop="?actionBarSize"
        android:visibility="gone"
        >
        <ImageView
            android:id="@+id/logo1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="43dp"
            android:layout_height="40dp"
            android:src="@mipmap/tab_wallet"
            />
        <TextView
            android:id="@+id/title1TextView"
            app:layout_constraintTop_toBottomOf="@id/logo1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/create_wallet_tip"
            android:text="@string/text_setup_wallet"
            />
        <org.newtonproject.newtoncore.android.widget.HelperEditTextLayout
            android:id="@+id/walletNameLayout"
            app:layout_constraintTop_toBottomOf="@id/title1TextView"
            style="@style/create_wallet_layout_normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:title="@string/wallet_name"
            app:hint="@string/hint_set_wallet_name"
            app:maxLength="32"
            />
        <org.newtonproject.newtoncore.android.widget.HelperEditTextLayout
            android:id="@+id/passwordLayout"
            app:layout_constraintTop_toBottomOf="@id/walletNameLayout"
            style="@style/create_wallet_layout_normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:title="@string/text_wallet_password"
            app:hint="@string/hint_password"
            app:inputType="textPassword"
            app:maxLength="20"
            />
        <org.newtonproject.newtoncore.android.widget.HelperEditTextLayout
            android:id="@+id/confirmPasswordLayout"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout"
            style="@style/create_wallet_layout_normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:title="@string/hint_repassword"
            app:hint="@string/hint_repeat_password"
            app:inputType="textPassword"
            app:maxLength="20"
            />
        <TextView
            android:id="@+id/termOfServiceTextView"
            app:layout_constraintBottom_toTopOf="@id/createWalletButton"
            style="@style/term_of_service"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/term_of_service_privacy_policy"
            android:layout_marginBottom="@dimen/big_margin"
            />
        <Button
            android:id="@+id/createWalletButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="@dimen/button_bottom"
            android:text="@string/text_continue"
            style="@style/main_button"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>