<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/rootView">
    <include layout="@layout/layout_toolbar_with_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?actionBarSize"
        >
        <LinearLayout
            android:id="@+id/updateNameTextView"
            style="@style/me_linearlayout_item_with_bg"
            >
            <TextView
                style="@style/me_item_text_left"
                android:text="@string/update_wallet_name"
                android:layout_marginLeft="@dimen/normal_margin"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/updatePasswordTextView"
            style="@style/me_linearlayout_item_with_bg"
            >
            <TextView
                style="@style/me_item_text_left"
                android:text="@string/update_password"
                android:layout_marginLeft="@dimen/normal_margin"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/exportPrivateKeyTextView"
            style="@style/me_linearlayout_item_with_bg"
            >
            <TextView
                style="@style/me_item_text_left"
                android:text="@string/export_privatekey"
                android:layout_marginLeft="@dimen/normal_margin"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/exportMnemonicTextView"
            style="@style/me_linearlayout_item_with_bg"
            android:visibility="gone"
            >
            <TextView
                style="@style/me_item_text_left"
                android:text="@string/export_mnemonic"
                android:layout_marginLeft="@dimen/normal_margin"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/exportKeyStoreTextView"
            style="@style/me_linearlayout_item_with_bg"
            >
            <TextView
                style="@style/me_item_text_left"
                android:text="@string/export_keystore"
                android:layout_marginLeft="@dimen/normal_margin"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/deleteWalletTextView"
            style="@style/me_linearlayout_item_with_bg"
            >
            <TextView
                style="@style/me_item_text_left"
                android:text="@string/delete_wallet"
                android:layout_marginLeft="@dimen/normal_margin"
                />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>