<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/import_mnemonic_form"
        android:layout_marginTop="@dimen/big_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            style="@style/create_wallet_textview"
            android:text="@string/hint_mnemonic"
            />
        <EditText
            style="@style/create_wallet_edittext"
            android:id="@+id/mnemonicEditText"
            android:hint="@string/hint_mnemonic"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:maxLines="3"
            />
        <TextView
            style="@style/create_wallet_textview"
            android:text="@string/hint_wallet_name"
            />
        <EditText
            style="@style/create_wallet_edittext"
            android:id="@+id/wallet_name"
            android:hint="@string/hint_wallet_name"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:singleLine="true"
            />
        <TextView
            style="@style/create_wallet_textview"
            android:text="@string/hint_set_password"
            />
        <EditText
            style="@style/create_wallet_edittext"
            android:id="@+id/password"
            android:hint="@string/hint_set_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            />
        <TextView
            style="@style/create_wallet_textview"
            android:text="@string/hint_repassword"
            />
        <EditText
            style="@style/create_wallet_edittext"
            android:id="@+id/repassword"
            android:hint="@string/hint_repassword"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            />
        <include layout="@layout/item_user_terms"/>
        <Button
            android:id="@+id/import_action"
            android:text="@string/import_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_gradient"
            android:layout_margin="@dimen/big_margin"
            android:textSize="@dimen/create_import_wallet_button_size"
            android:textColor="@color/white"
            style="?android:attr/borderlessButtonStyle"
            />
    </LinearLayout>
</ScrollView>